tests/analyzer/fail/struct-empty.api
// expected: 6001

type bad = struct {
  a: u32,
  b: *const lol,
  a: u32,
};
